--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ google-api-python-client = "^2.132.0"
 gspread = "^6.1.2"
 flask-limiter = "^3.7.0"
 google-auth = "^2.30.0"
+pytz = "^2024.1"
+user-agents = "^2.2.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
